--- a/charts/etcd/templates/job-auth.yaml
+++ b/charts/etcd/templates/job-auth.yaml
@@ -22,7 +22,7 @@ spec:
         - name: auth-bootstrap
           # Use alpine as a helper since quay.io/coreos/etcd is distroless (no shell)
           image: "alpine:3.19"
-          command: ["/bin/sh", "-c", "apk add --no-cache etcd-ctl && /usr/local/bin/auth-bootstrap.sh"]
+          command: ["/bin/sh", "-c", "apk add --no-cache etcd && /usr/local/bin/auth-bootstrap.sh"]
           env:
             - name: ETCDCTL_API
               value: "3"
