fix: Correct a typo in the `etcd/values.yaml` comment for existing secret usage.

--- a/charts/etcd/values.yaml
+++ b/charts/etcd/values.yaml
@@ -110,7 +110,7 @@ auth:
     create: true
     # Root password (default: "etcd-root-password"). Should be overridden in production.
     rootPassword: "etcd-root-password"
-    # User existing secret for root password
+    # Use existing secret for root password
     existingSecret: ""
     existingSecretPasswordKey: "password"
 
