--- a/charts/etcd/templates/statefulset.yaml
+++ b/charts/etcd/templates/statefulset.yaml
@@ -1,3 +1,6 @@
+{{- if and .Values.tls.enabled (empty .Values.tls.existingSecret) -}}
+{{- fail "When tls.enabled is true, tls.existingSecret must be provided and not empty." -}}
+{{- end -}}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
