--- a/charts/etcd/templates/secret-auth.yaml
+++ b/charts/etcd/templates/secret-auth.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.auth.rbac.enabled -}}
+{{- if and .Values.auth.rbac.enabled (not .Values.auth.rbac.existingSecret) -}}
 apiVersion: v1
 kind: Secret
 metadata:
