--- a/charts/etcd/templates/job-auth.yaml
+++ b/charts/etcd/templates/job-auth.yaml
@@ -20,7 +20,8 @@ spec:
         {{- toYaml .Values.imagePullSecrets | nindent 8 }}
       containers:
         - name: auth-bootstrap
-          # Use alpine as a helper since quay.io/coreos/etcd is distroless (no shell)
+          # Use alpine as a helper since registry.k8s.io/etcd is distroless (no shell)
+          # WARN: This installs the latest etcd package from Alpine, which may differ from the cluster version.
           image: "alpine:3.19"
           command: ["/bin/sh", "-c", "apk add --no-cache etcd && /usr/local/bin/auth-bootstrap.sh"]
           env:
