--- a/charts/etcd/templates/auth-job-script.yaml
+++ b/charts/etcd/templates/auth-job-script.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- include "etcd.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": post-install
-    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
+    "helm.sh/hook-delete-policy": before-hook-creation
 data:
   auth-bootstrap.sh: |
     #!/bin/sh
