--- a/charts/etcd/templates/job-auth.yaml
+++ b/charts/etcd/templates/job-auth.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- include "etcd.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": post-install
-    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
+    "helm.sh/hook-delete-policy": before-hook-creation
     "helm.sh/hook-weight": "5"
 spec:
   template:
