--- a/charts/etcd/templates/job-auth.yaml
+++ b/charts/etcd/templates/job-auth.yaml
@@ -22,7 +22,7 @@ spec:
       {{- end }}
       containers:
         - name: auth-bootstrap
-          # Use alpine as a helper since registry.k8s.io/etcd is distroless (no shell)
+          # Use alpine to provide a shell environment for the bootstrap script
           # WARN: This installs the latest etcd package from Alpine, which may differ from the cluster version.
           image: "alpine:3.19"
           command: ["/bin/sh", "-c", "apk add --no-cache etcd && /usr/local/bin/auth-bootstrap.sh"]
