--- a/charts/etcd/templates/configmap.yaml
+++ b/charts/etcd/templates/configmap.yaml
@@ -9,15 +9,16 @@ data:
   {{- $namespace := .Release.Namespace }}
   {{- $port := .Values.etcd.peerPort | toString }}
   {{- $initCluster := list }}
+  {{- $root := . }}
   {{- if eq .Values.architecture "standalone" }}
     {{- $pod := printf "%s-0" $fullname }}
-    {{- $address := printf "%s://%s.%s-headless.%s.svc.cluster.local:%s" (include "etcd.scheme" $) $pod $fullname $namespace $port }}
+    {{- $address := printf "%s://%s.%s-headless.%s.svc.cluster.local:%s" (include "etcd.scheme" .) $pod $fullname $namespace $port }}
     {{- $initCluster = append $initCluster (printf "%s=%s" $pod $address) }}
   {{- else }}
     {{- $replicas := .Values.replicaCount | int }}
     {{- range $i, $e := until $replicas }}
       {{- $pod := printf "%s-%d" $fullname $i }}
-      {{- $address := printf "%s://%s.%s-headless.%s.svc.cluster.local:%s" (include "etcd.scheme" $) $pod $fullname $namespace $port }}
+      {{- $address := printf "%s://%s.%s-headless.%s.svc.cluster.local:%s" (include "etcd.scheme" $root) $pod $fullname $namespace $port }}
       {{- $initCluster = append $initCluster (printf "%s=%s" $pod $address) }}
     {{- end }}
   {{- end }}
