refactor: Renames variable which determines whether peer communication requires client certificates

--- a/charts/etcd/templates/statefulset.yaml
+++ b/charts/etcd/templates/statefulset.yaml
@@ -93,7 +93,7 @@ spec:
             - name: ETCD_PEER_TRUSTED_CA_FILE
               value: "/etc/etcd/tls/ca.crt"
             - name: ETCD_PEER_CLIENT_CERT_AUTH
-              value: {{ not .Values.tls.peer.allowInsecure | toString | quote }}
+              value: {{ .Values.tls.peer.clientCertAuth | toString | quote }}
             
             # Etcdctl TLS Configuration
             - name: ETCDCTL_CACERT
