--- a/charts/etcd/Chart.yaml
+++ b/charts/etcd/Chart.yaml
@@ -3,7 +3,7 @@ name: etcd
 description: A Helm chart for deploying Etcd with High Availability (HA)
 type: application
 version: 0.1.0
-appVersion: "3.5.10"
+appVersion: "3.5.10-0"
 keywords:
   - etcd
   - ha
