feat: Implement etcd startup probe and refine auth job's etcdctl endpoint and Helm hook annotations.

--- a/charts/etcd/templates/job-auth.yaml
+++ b/charts/etcd/templates/job-auth.yaml
@@ -6,9 +6,7 @@ metadata:
   labels:
     {{- include "etcd.labels" . | nindent 4 }}
   annotations:
-    "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation
-    "helm.sh/hook-weight": "5"
 spec:
   template:
     metadata:
@@ -30,7 +28,7 @@ spec:
             - name: ETCDCTL_API
               value: "3"
             - name: ETCDCTL_ENDPOINTS
-              value: "{{ include "etcd.scheme" . }}://{{ include "etcd.fullname" . }}:{{ .Values.etcd.clientPort }}"
+              value: "{{ include "etcd.scheme" . }}://{{ include "etcd.fullname" . }}-headless:{{ .Values.etcd.clientPort }}"
             - name: ETCD_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
