--- a/charts/etcd/templates/job-auth.yaml
+++ b/charts/etcd/templates/job-auth.yaml
@@ -8,6 +8,7 @@ metadata:
   annotations:
     "helm.sh/hook-delete-policy": before-hook-creation
 spec:
+  backoffLimit: 10
   template:
     metadata:
       labels:
