--- a/charts/etcd/values.yaml
+++ b/charts/etcd/values.yaml
@@ -27,8 +27,8 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext: {}
-  # fsGroup: 2000
+podSecurityContext:
+  fsGroup: 1001
 
 securityContext:
   capabilities:
